[package]
name = "pmemlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = "0.0.0-2025-11-30-0053"
crc64fast = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(verus_keep_ghost)"] }

[package.metadata.verus]
verify = true
# Verus release version for CI workflows (should be compatible with the vstd version above)
# Find releases at: https://github.com/verus-lang/verus/releases
release = "0.2026.01.10.531beb1"
# Rust toolchain version required by this Verus release
rust-version = "1.92.0"